--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         #rushi{
             text-align: center;
             width: 90px;
+            outline: none;
             border: none;
             background-color: rgb(247, 197, 105);
             padding-top: 5px;
@@ -156,7 +157,7 @@
 
             <div class="mt-4"> 
               <b> <span> Verify Captcha </span></b>
-               <div class="mt-2 fs-5 ">  <input id="rushi" value=""  type="text">  <span id="refresh"  onclick="RepetCaptcha()"  class="bi bi-arrow-clockwise  ms-2"></span>
+               <div class="mt-2 fs-5 ">  <input id="rushi" readonly  type="text">  <span id="refresh"  onclick="RepetCaptcha()"  class="bi bi-arrow-clockwise  ms-2"></span>
                 
             </div>
                
